iSAAC-02.15.07.14
* SAAC-814 update README with quick start guide
* SAAC-813 mergeInsertionAlignments crashes with --seed step=3

iSAAC-02.15.07.09
* SAAC-812 Change license to GNU GENERAL PUBLIC LICENSE Version 3

iSAAC-02.15.06.22
* SAAC-806 boost 1.58 vector deserialization causes isaac-align fail to resume

iSAAC-02.15.06.04
* SAAC-803 Assertion failure when updating CIGAR of right-anchored insertion

iSAAC-02.15.05.27
* SAAC-802 boost 1.58 cmake 3.1.3 and gcc 4.5.3 4.7.3 4.7.4 4.8.0 4.8.1 4.8.2 4.8.3 4.8.4 4.9.0 4.9.1 4.9.2 5.1.0

iSAAC-02.15.05.08
* SAAC-801 Failure: Only one split per CIGAR is supported at the moment

iSAAC-02.15.05.06
* SAAC-800 inconsistent duplicate flag in the bam file when pair duplicates another pair with split alignment

iSAAC-02.15.04.22
* SAAC-798 inconsistent duplicate flag when one of the duplicates mate is a split read

iSAAC-02.15.04.09
* SAAC-797 Change license to Illumina Public License 1

iSAAC-02.15.04.02
* SAAC-790 c++0x compatibility

iSAAC-02.15.04.01
* SAAC-795 Assertion failure if input bam read names are shorter than 8 characters

iSAAC-02.15.03.31
* SAAC-793 Assertion failure in gap realigner when deletion pushes a section of the read past the contig end
* SAAC-788 glibc-debug failures

iSAAC-02.15.03.26
* SAAC-791 anchors incorrectly updated in split read aligner
* SAAC-792 unit tests fail due to varying order of initialization
* SAAC-782 isaac-pack-reference on reordered reference fails to properly extract neighbor flags

iSAAC-02.15.03.19
* SAAC-787 Combining two bcl-bgzf flowcells in one run causes a failure

iSAAC-02.15.03.12
* SAAC-786 Bam parsing fails on secondary alignments

iSAAC-02.15.03.04
* SAAC-785 pre-allocate-bins causes iSAAC to waste Temp disk space on hg38
* SAAC-784 -j command line options conflicts with --seed-base-quality-min

iSAAC-02.15.02.28
* SAAC-783 SplitReadAligner assertion failure when trying to introduce an insertion with head and tail seeds exactly overlapping

iSAAC-02.15.02.18